--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -122,7 +122,7 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 	/*COMPLAINTS LIST*/
 	#complaints-list {margin:2% 0}
 	#complaints-list > li {padding:20px 10px 10px 10px}
-	#complaints-list > li:nth-child(2n) {background:#F2F0F1}
+	#complaints-list > li:nth-child(2n) {background:#F8F8F8}
 	#complaints-list div a {color:#444; font-weight:normal; text-decoration: none; padding-bottom: 2px}
 	#complaints-list div a:hover {text-decoration:underline}
 
@@ -146,15 +146,34 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 	/*END COMPLAINTS LIST*/
 
 	/*VIEW COMPLAINT*/
-	#view-complaint .user {overflow:auto; margin-bottom:2%; display: inline-block; min-width: 100%; background: linear-gradient(to bottom, #F2F0F1, #FFF); padding: 3px; border-radius:5px}
+	#view-complaint .user {overflow:auto; margin-bottom:2%; display: inline-block; min-width: 100%; background: linear-gradient(to bottom, #F7F7F7, #FFF); padding: 3px; border-radius:5px}
 	#view-complaint .user a {color:#666; text-decoration: none; padding-bottom: 2px}
 	#view-complaint .user a:hover {text-decoration:underline}
 	#view-complaint .user h2 {font-style:italic; color:#f29113; font-weight:bold}
 	#view-complaint .user span {display:block; color: #777; font-size:.9em; font-style:italic; margin-top:6px}
 	#view-complaint .user img {float:left; width:40px; height:auto; border:solid 1px #DDD; margin-right:7px}
-	#view-complaint .complaint-details p {margin-top:.5%}
+	#view-complaint .complaint-details p {margin-top:.5%; clear:both}
 	#view-complaint .complaint-details footer {margin-bottom:0}
 	/*END VIEW COMPLAINT*/
+
+	/*COMMENTS*/
+    #comments {margin:2% 0}
+    #comments > ul > li {float:left; margin: 1.5% 0; width: 100%}
+    #comments .user {float: left; width:100%; margin: 1% 0; padding: 2% 1%; background:linear-gradient(to bottom, #F7F7F7, #FFF); border:solid 1px #F7F7F7; border-radius: 5px; box-sizing: border-box}
+    #comments .user .textarea-wrapper {width:70%; float: left; margin-left:1%}
+    #comments .comment-button {clear:both; text-align:left; margin-top: 5px}
+    #comments .comment-button * {padding:3px 8px; background:#BBB; color:#FFF; border:none; cursor:pointer; border-radius:3px}
+    #comments .comment-button *:hover {background:#CCC}
+    #comments img {float:left; height:48px; width:48px; border:solid 1px #DDD}
+    #comments .user textarea {width:100%; height:48px; padding:2px; border:solid 1px #DDD; box-sizing: border-box}
+    #comments .comments-details {width:70%; float:left; margin-left: 1%; position:relative; padding-right:20px}
+    #comments .comments-details a {display:block; font-size:.98em; text-decoration:none; color:#666; font-weight:bold; overflow: hidden; text-overflow:ellipsis; white-space: nowrap; padding-bottom:2px}
+    #comments .comments-details .comment-date {display:block; font-size: .73em; margin-top:7px; color:#999}
+    #comments .comments-details p {line-height:18px; margin-top:7px}
+
+    #comments .manager {position:absolute; right:0; top:0; background:url('../img/arrow-down.png') center center no-repeat}
+    #comments .options {position:absolute; right:0; top:17px}
+    /*END COMMENTS*/
 
     /*PAGINATION*/
     .paginator {clear:both; text-align:center}
