--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -6,7 +6,7 @@ body {width: 100%; font-size: 86.7%; clear: both; font-family: Helvetica Neue, H
  #top-header,#main-content, nav ul, .message, body>footer div, div#modal {width: 77%}
 
 /*HEADER*/
-header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535, #777); background: -moz-linear-gradient(to top, #353535, #777); background: -ms-linear-gradient(to top, #353535, #777)}
+header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535, #777)}
 #top-header {margin: 0 auto; color: #FFF; padding: 13px 0}
 #top-header h1 {font-size: 1.5em; color: #fab357; font-weight: bold; margin-bottom: 5px; text-shadow: 1px 1px 2px #222}
 #top-header p {font-size: 0.9em; color: #fab357; float: right; font-weight: bold; width: 200px; text-align: right; line-height: 15px}
@@ -15,7 +15,7 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 	#panel {float:right; text-align:right}
 	#panel h1 {font-size:1em; margin-bottom:10px; display:block; color:#DDD;}
     #panel h1.admin {color:#e6d28c; padding-right:25px; background:url('../img/bsk.png') no-repeat right center; line-height:30px; height:30px}
-	#panel a {background:#AAA; display:inline-block; text-decoration:none; font-size:.9em; padding:5px; color:#FFF; border-radius:4px}
+	#panel a {background:#AAA; display:inline-block; margin-left:5px; text-decoration:none; font-size:.9em; padding:5px; color:#FFF; border-radius:4px}
 	#panel a:hover {background:#888}
 	/*END PANEL*/
 
@@ -31,7 +31,7 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 /*END HEADER*/
 
 /*FLASH MESSAGES*/
-.message {margin:0 auto .7%; padding:.2% .5%; overflow:auto; vertical-align:center; border-radius:7px; -moz-border-radius:7px; -webkit-border-radius:7px; box-sizing:border-box; position:relative }
+.message {margin:0 auto .7%; padding:.2% .5%; overflow:auto; vertical-align:center; border-radius:7px; box-sizing:border-box; position:relative }
 .message span {float:left; height:31px; width:31px; margin-right:5px}
 .message p {line-height:35px; font-size:1.1em}
 .message .close-message {position:absolute; top:0; right:0; border-radius:4px; border:none; color:#FFF; cursor:pointer; outline:none; display:none}
@@ -51,9 +51,9 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 
 /*CONTENT*/
 	#main-content {margin: 0 auto}
-	#content {width: 100%; float: left; min-height: 700px; background: #FFF; border-radius: 7px; -moz-border-radius: 7px; -webkit-border-radius: 7px; box-shadow: 2px 3px 3px #AAA}
+	#content {width: 100%; float: left; min-height: 700px; background: #FFF; border-radius: 7px; box-shadow: 2px 3px 3px #AAA}
 	#content article {padding: 2.3%; overflow: auto}
-	#content article h1 {font-size: 1.2em; color: #f29113; text-transform: uppercase; font-weight: bold; display: inline-block; word-break:break-all; line-height: 25px}
+	#content article h1 {font-size: 1.2em; color: #f29113; text-transform: uppercase; font-weight: bold; display: inline-block; word-break:break-word; line-height: 25px}
 	#content article footer {font-size: 0.9em; margin: 2% 0; font-style: italic}
     #content article footer a, #content article footer a:visited {text-decoration:none; color:#000; font-weight: bold}
     #content article footer a:hover {text-decoration: underline}
@@ -67,7 +67,7 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 	/*END HOME*/
 
 	#content article div.button {float:right}
-	#content article div.button *, .default-button {padding: 7px 20px; color: #FFF; text-decoration: none; font-weight: bold; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; font-size: 0.9em; border:none; cursor:pointer; display:inline-block; outline: none}
+	#content article div.button *, .default-button {padding: 7px 20px; color: #FFF; text-decoration: none; font-weight: bold; border-radius: 5px; font-size: 0.9em; border:none; cursor:pointer; display:inline-block; outline: none}
 	#content article div.button * {background: #fab357;}
 	#content article div.button *:hover {background: #FCCB8C}
 
@@ -173,6 +173,8 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 
     #comments .manager {position:absolute; right:0; top:0; background:url('../img/arrow-down.png') center center no-repeat}
     #comments .options {position:absolute; right:0; top:17px}
+
+    #comments .no-comments {width:100%; text-align:center; font-size:.9em; font-style:italic; color:#999}
     /*END COMMENTS*/
 
     /*PAGINATION*/
