--- a/webroot/css/media-queries.css
+++ b/webroot/css/media-queries.css
@@ -36,9 +36,10 @@
 
     #content article div.button {float: none; margin: 20px 0}
 
-    #form>div input,#form>div textarea {width: 90%}
-    #form>div {margin-bottom: 4%}
-    #form select {min-width: 40%}
+    #form > div input, #form>div textarea {width: 100%}
+    #form > div {margin-bottom: 4%}
+    #form .input-wrapper {float:none; width:90%}
+    #form select {min-width: 50%}
     #form label {float: none; display: block; text-align: left; padding: 0px}
 
     #basic-list {margin:8% auto;}
@@ -91,7 +92,9 @@
     #top-header,#main-content,nav ul, .message, body>footer div, div#modal {width: 96%}
 
     div#modal {left:5%}
-    #form>div input,#form>div textarea {width: 50%}
+
+    #form .input-wrapper {width:50%}
+    #form > div input, #form > div textarea {width: 100%}
 
     #basic-list {margin:2% auto;}
     #basic-list ul li {width:45%; margin:1% 2.5%}
