--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -53,7 +53,7 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
 	#main-content {margin: 0 auto}
 	#content {width: 100%; float: left; min-height: 700px; background: #FFF; border-radius: 7px; box-shadow: 2px 3px 3px #AAA}
 	#content article {padding: 2.3%; overflow: auto}
-	#content article h1 {font-size: 1.2em; color: #f29113; text-transform: uppercase; font-weight: bold; display: inline-block; word-break:break-word; line-height: 25px}
+	#content article h1 {font-size: 1.2em; color: #f29113; text-transform: uppercase; font-weight: bold; display: inline-block; word-wrap:break-word; line-height: 25px}
 	#content article footer {font-size: 0.9em; margin: 2% 0; font-style: italic}
     #content article footer a, #content article footer a:visited {text-decoration:none; color:#000; font-weight: bold}
     #content article footer a:hover {text-decoration: underline}
@@ -102,7 +102,8 @@ header {width: 100%; margin: 0 auto; background: linear-gradient(to top, #353535
     /*BASIC MODAL*/
     div#super-overlay, div#modal {display:none}
     div#super-overlay {position:fixed; width:100%; height:100%; background:#000; opacity:.8; z-index:1000}
-    div#modal {position: absolute; overflow:hidden; background-color: #CCC; z-index: 1001; top: 5%; left: 11.5%; border-radius:10px; text-align:center; padding:10px; box-sizing:border-box}
+    div#modal {position: absolute; overflow:hidden; background-color: #CCC; z-index: 1001; top: 5%; left: 11.5%; border-radius:10px; text-align:center; padding:0 10px 10px 10px; box-sizing:border-box}
+    div#modal .hint {margin:4px 0}
     /*END BASIC MODAL*/
 
     /*BASIC LIST*/
