--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -3,7 +3,7 @@
 body {width:100%; font-size:86.7%; clear:both; font-family:Helvetica Neue, Helvetica, Arial, sans-serif; background:#DDD}
 
  /*DEFAULT PAGE WIDTH*/
- #top-header,#main-content, nav ul, .flash .message, body>footer div, div#modal {width:77%}
+ #top-header,#main-content, nav ul, .flash .message, body>footer div {width:77%}
 
 /*HEADER*/
 header {width:100%; margin:0 auto; background:linear-gradient(to top, #353535, #777)}
@@ -105,9 +105,13 @@ header {width:100%; margin:0 auto; background:linear-gradient(to top, #353535, #
     /*BASIC MODAL*/
     div#super-overlay, div#modal {display:none}
     div#super-overlay {position:fixed; width:100%; height:100%; background:#000; opacity:.8; z-index:1000}
-    div#modal {position:absolute; overflow:hidden; background-color:#CCC; z-index:1001; top:5%; left:11.5%; border-radius:10px; text-align:center; padding:0 10px 10px 10px; box-sizing:border-box}
+    div#modal {position:absolute; overflow:hidden; background-color:#CCC; z-index:1001;  text-align:center; box-sizing:border-box}
     div#modal .hint {margin:4px 0}
     /*END BASIC MODAL*/
+
+    /*MODALS*/
+    div.image-modal {top:5%; left:11.5%; border-radius:10px; padding:0 10px 10px 10px}
+    /*END MODALS*/
 
     /*BASIC LIST*/
     #basic-list {margin:2% auto;}
