--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -110,7 +110,7 @@ header {width:100%; margin:0 auto; background:linear-gradient(to top, #353535, #
     /*END BASIC MODAL*/
 
     /*MODALS*/
-    div.image-modal {top:5%; left:11.5%; border-radius:10px; padding:0 10px 10px 10px}
+    div.image-modal {width:77%; top:5%; left:11.5%; border-radius:10px; padding:0 10px 10px 10px}
     /*END MODALS*/
 
     /*BASIC LIST*/
